--- a/__tests__/fixtures/template_replace.html
+++ b/__tests__/fixtures/template_replace.html
@@ -2,5 +2,7 @@
   <body>
     <h1>Hello World.</h1>
     <h2>__HOME_URL__</h2>
+    <a href="__HOME_URL__">__HOME_URL__</a>
+    <p>__COMPLEX__!@$#{}/()_REPLACEMENT__</p>
   </body>
 </html>
